# Video-Automation-Remotion

./: .env.example  .gitignore  ABHI-COMPARE.html  AGENTS.md  AVAIL-REVIEW.html  BAKEOFF.md  CLAUDE.md  COMBOS.html  CROSS-CREATOR-COMPARE.html  DECISIONS.html  Dockerfile  FABLE.md  IMPLEMENTATION_QUICKSTART.md  INDEX.html  MOTION-GRAPHICS.html  Makefile  NEW-COMPONENTS.html  PLAN.md  PORT-MAP.md  PORTS.md  PROJECT_CONTEXT.html  README.md  SHOWCASE.html  STYLED-REELS.html  VARIATIONS.html  VIDEO_PIPELINE_RESEARCH.md  VPS_DEPLOYMENT_GUIDE.md  docker-compose.dev.yml  eslint.config.mjs  generate_tiles.py  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: NEXT-STEPS.md  OVERNIGHT-PLAN.md  arch-decisions.md  coding-conventions.md  commands.md  constraints-gotchas.md  file-map.md  memory.md  pipeline-architecture.md  project-structure.md  scratchpad.md  tech-stack.md
brand/: brands.json  config.json
docs/: ASSET_INVENTORY.md  IN-FLIGHT-NOW.md  ROADMAP.md  SETUP.md  SLIDESHOW-v2.html  SLIDESHOW-v3.html  SLIDESHOW-v4-sprint5.html  SLIDESHOW-v5-sprint6.html  SLIDESHOW.html  WAVE7-HANDOFF-v2.md  WAVE7-HANDOFF.md  WAVE7-RECOVERY.md  wave6-validation.html  wave7-validation.html
hyperframes/: .gitignore  hyperframes.json  meta.json  overspeaker-spike.html  overspeaker-spike.timings.json  package-lock.json  package.json
scripts/: abhi-qa-contactsheet.py  build-codex-review-sheets.py  build-comparison-grid-v4.py  build-cross-creator-gallery.py  clean-remotion-bundles.sh  compare-frames.py  dump-source-candidates.py  gen_hlg_lut.py  (+27 more)
(+1009 files in other folders)
