[project]
name = "10-video-automation-remotion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
]

[project.optional-dependencies]
matting = [
    "av>=17.0.0",
    "pims>=0.7",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
